Update and rename .env.local.example to .env.local

--- a/.env.local
+++ b/.env.local
@@ -7,7 +7,7 @@
 OPENAI_API_KEY=[YOUR_OPENAI_API_KEY]
 
 # Search Configuration
-TAVILY_API_KEY=[YOUR_TAVILY_API_KEY]  # Get your API key at: https://app.tavily.com/home
+TAVILY_API_KEY=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  # Get your API key at: https://app.tavily.com/home
 
 ###############################################################################
 # Optional Features
@@ -27,8 +27,8 @@ TAVILY_API_KEY=[YOUR_TAVILY_API_KEY]  # Get your API key at: https://app.tavily.
 # LOCAL_REDIS_URL=redis://localhost:6379  # local Redis URL (if USE_LOCAL_REDIS=true)
 
 # OPTION 2: Upstash Redis (Recommended for production)
-# UPSTASH_REDIS_REST_URL=[YOUR_UPSTASH_REDIS_REST_URL]  # Upstash Redis REST URL (if USE_LOCAL_REDIS=false)
-# UPSTASH_REDIS_REST_TOKEN=[YOUR_UPSTASH_REDIS_REST_TOKEN]  # Upstash Redis REST Token (if USE_LOCAL_REDIS=false)
+UPSTASH_REDIS_REST_URL=https://tender-monkey-59789.upstash.io  # Upstash Redis REST URL (if USE_LOCAL_REDIS=false)
+UPSTASH_REDIS_REST_TOKEN=AemNAAIjcDE3NGFlNGE3MGY1NWE0NTVkYjJiMjhlZDE4ZTlkZjFjYXAxMA  # Upstash Redis REST Token (if USE_LOCAL_REDIS=false)
 
 #------------------------------------------------------------------------------
 # Additional AI Providers
@@ -41,7 +41,7 @@ TAVILY_API_KEY=[YOUR_TAVILY_API_KEY]  # Get your API key at: https://app.tavily.
 # ANTHROPIC_API_KEY=[YOUR_ANTHROPIC_API_KEY]
 
 # Groq
-# GROQ_API_KEY=[YOUR_GROQ_API_KEY]
+# GROQ_API_KEY=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
 
 # Ollama (Local AI)
 # OLLAMA_BASE_URL=http://localhost:11434
@@ -85,6 +85,6 @@ TAVILY_API_KEY=[YOUR_TAVILY_API_KEY]  # Get your API key at: https://app.tavily.
 # Additional Features
 # Enable extra functionality as needed
 #------------------------------------------------------------------------------
-# NEXT_PUBLIC_ENABLE_SHARE=true  # Enable sharing of chat conversations
-# SERPER_API_KEY=[YOUR_SERPER_API_KEY]  # Enable video search capability
+NEXT_PUBLIC_ENABLE_SHARE=true  # Enable sharing of chat conversations
+SERPER_API_KEY=92a6ad5629efde00a09eafd6293333bf6f23807b  # Enable video search capability
 # JINA_API_KEY=[YOUR_JINA_API_KEY]  # Alternative to Tavily for retrieve tool
