--- a/.env.local
+++ b/.env.local
@@ -87,4 +87,4 @@ UPSTASH_REDIS_REST_TOKEN=AemNAAIjcDE3NGFlNGE3MGY1NWE0NTVkYjJiMjhlZDE4ZTlkZjFjYXA
 #------------------------------------------------------------------------------
 NEXT_PUBLIC_ENABLE_SHARE=true  # Enable sharing of chat conversations
 SERPER_API_KEY=92a6ad5629efde00a09eafd6293333bf6f23807b  # Enable video search capability
-# JINA_API_KEY=[YOUR_JINA_API_KEY]  # Alternative to Tavily for retrieve tool
+JINA_API_KEY=jina_0a4938fb87c14618b0fa6e42668316c6m1BOwUvQU-7s2dkDCTi8WccSzDAV  # Alternative to Tavily for retrieve tool
